<resources>
    <string name="app_name">calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="h">=</string>
    <string name="percent">%</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equally">=</string>
    <string name="clean_all">CE</string>
    <string name="to_share">/</string>
    <string name="multiply">*</string>
    <string name="clean">C</string>
    <string name="memory_clean">MC</string>
    <string name="memory_plus">M+</string>
    <string name="memory_minus">M-</string>
    <string name="memory_read">MR</string>
    <string name="standard_style">Standard style</string>
    <string name="black_style">Black style</string>
    <string name="light_style">Light Style</string>
    <string name="red_style">Red style</string>
    <string name="choose_style">Choose style calaculator</string>
</resources>