<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:backgroundTint="@color/blue"
        android:text="@string/one"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        android:textStyle="italic" />


    <Button
        android:id="@+id/second_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/blue"
        android:text="@string/two"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        android:textStyle="italic" />

    <Button
        android:id="@+id/three_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/blue"
        android:text="@string/three"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        android:textStyle="italic" />


    <Button
        android:id="@+id/four_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:backgroundTint="@color/blue"
        android:text="@string/four"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        android:textStyle="italic" />


    <Button
        android:id="@+id/five_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:text="@string/five"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        android:textStyle="italic" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:backgroundTint="@color/blue"
        android:text="@string/six"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        android:textStyle="italic" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/blue"
        android:text="@string/seven"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        android:textStyle="italic" />


    <Button
        android:id="@+id/eight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:backgroundTint="@color/blue"
        android:text="@string/eight"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        android:textStyle="italic" />


    <Button
        android:id="@+id/nine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/blue"
        android:text="@string/nine"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        android:textStyle="italic" />


</FrameLayout>