<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mat"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/standard_theme_btn"
            style="@style/ButtonSelectionStyle"
            android:text="@string/standard_style" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/black_theme_btn"
            style="@style/ButtonSelectionStyle"
            android:text="@string/black_style" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView style="@style/StyleTextChoosing" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/green_theme_btn"
            style="@style/ButtonSelectionStyle"
            android:text="@string/green_style" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/red_theme_btn"
            style="@style/ButtonSelectionStyle"
            android:text="@string/red_style" />
    </LinearLayout>

</LinearLayout>

